--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,12 +5,22 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:h2:file:./data/location
-
+    url: jdbc:h2:file:/location-service/data
+  boot:
+    admin:
+      client:
+        instance:
+          management-base-url: http://localhost:8088
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.value}
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
 
+url:
+  services:
+    weather: http://localhost:8088/weather-service
+
 server:
-  port: 8083
+  port: 0
