--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:h2:file:/location-service/data
+    url: jdbc:h2:file:./location-service/data
   boot:
     admin:
       client:
