--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,8 @@ spring:
     admin:
       client:
         instance:
-          management-base-url: http://localhost:8088
+          api-gateway-port: 17957
+          management-base-url: http://localhost:${spring.boot.admin.client.instance.api-gateway-port}
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.value}
@@ -20,7 +21,7 @@ eureka:
 
 url:
   services:
-    weather: http://localhost:8088/weather-service
+    weather: http://localhost:${spring.boot.admin.client.instance.api-gateway-port}/weather-service
 
 server:
   port: 0
